grai-server/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: the-guide
  labels:
    name: the-guide
