grai-server/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-guide-svc
  namespace: the-guide
spec:
  ports:
  - name: http
    targetPort: 8000
    port: 8000
  selector:
    app: the-guide
