grai-server/k8s/base/ingress.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: the-guide
  namespace: the-guide
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`guide.dev.internal.grai.io`)
    kind: Rule
    services:
    - name: the-guide-svc
      kind: Service
      port: 8000
